# waves_field

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Program.cpp  Program.h  README.md  Window.h  conanfile.py  config.json.in  docker-compose.yml  main.cpp  setup_clang_debug.ps1  setup_msvc.ps1  setup_msvc_debug.ps1
.github/workflows/: build.yml
ci/: .vsconfig  entrypoint.ps1  win_runner.Dockerfile  windows_runner.md
conan/profiles/: dev-clang  dev-msvc
include/: Program.h  Window.h
resource/: waves_scene.json.in
shaders/: CMakeLists.txt  control_cube.frag  grid.frag  phong_light.frag  phong_light.vert  shader.vert  unit_axis.frag
src/: Program.cpp  Window.cpp  app.cpp  app.hpp  app.ixx  camera.cpp  camera.hpp  clock.cpp  clock.hpp  config.cpp  config.hpp  gl_error.hpp  glfw_glad.hpp  glfw_glew.hpp  grid.cpp  grid.hpp  main.cpp  shader.cpp  shader.hpp  uniform_buffer.cpp  uniform_buffer.hpp  utils.cpp  utils.hpp  utils.ixx  vk.ixx  window.cpp  window.hpp  window.ixx
src/components/: camera.cpp  camera.hpp  grid.cpp  grid.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  movement.cpp  movement.hpp  render.cpp  render.hpp  transform.cpp  transform.hpp  velocity.hpp  wave.hpp
src/resource/: shaders_manager.cpp  shaders_manager.hpp
src/systems/: camera.cpp  camera.hpp  input.cpp  input.hpp  input_command.hpp  movement.cpp  movement.hpp  pc_input.cpp  pc_input.hpp  physics.cpp  physics.hpp  renderer.cpp  renderer.hpp  unit_axes.hpp  waves.cpp  waves.hpp
src/vk/: device.cpp  device.hpp  instance.cpp  instance.hpp  physical_device.cpp  physical_device.hpp
test_package/: conanfile.py
